Displays data in database Displaying data on classes page - in progress

--- a/src/classes.html
+++ b/src/classes.html
@@ -8,37 +8,32 @@
 
     <div class="page__body">
 
-        <section class="classes-details">
+        <section class="classes">
 
-            <article class="classes-detail classes-detail__bioLab">
-                <div class="classes-img classes-img__bioLab"></div>
-                <a class="classes-detail__title">Introductory Biology Lab</a>
-                <h2 class="classes-detail__subtitle">BIO-1041-OL</h2>
-                <p class="classes-detail__info">2017-2018 - Summer Semester</p>
+            <article id="card" class="class -bioLab">
+                <div class="class__hero">
+                    <p class="class__subject">Bio Lab</p>
+                </div>
+                <div class="class__info">
+                    <a id="classTitle" class="class__title">Introductory Biology Lab</a>
+                    <h2 id="classDesc" class="class__subtitle">BIOL-1041-OL</h2>
+                    <p id="classCredits" class="class__info">3</p>
+                </div>
             </article>
 
-            <div class="classes-detail classes-detail__bio">
-                <div class="classes-img classes-img__bio"></div>
-                <a class="classes-detail__title">Introductory Biology</a>
-                <h2 class="classes-detail__subtitle">BIO-1043-OL</h2>
-                <p class="classes-detail__info">2017-2018 - Summer Semester</p>
-            </div>
+            <article id="card" class="class -bio">
+                <div class="class__hero">
+                    <p class="class__subject">Bio</p>
+                </div>
+                <div class="class__info">
+                    <a id="classTitle" class="class__title">Introductory Biology</a>
+                    <h2 id="classDesc" class="class__subtitle">BIO-1041-OL</h2>
+                    <p id="classCredits" class="class__info">3</p>
+                </div>
+            </article>
 
-            <div class="classes-detail classes-detail__publicSpeaking">
-                <div class="classes-img classes-img__publicSpeaking"></div>
-                <a class="classes-detail__title">Public Speaking</a>
-                <h2 class="classes-detail__subtitle">COM-1113-OL</h2>
-                <p class="classes-detail__info">2017-2018 - Summer Semester</p>
-            </div>
 
-            <div class="classes-detail classes-detail__freedoms">
-                <div class="classes-img classes-img__freedoms"></div>
-                <a class="classes-detail__title">Freedom in American Society</a>
-                <h2 class="classes-detail__subtitle">PLS-3003-OL</h2>
-                <p class="classes-detail__info">2017-2018 - Summer Semester</p>
-            </div>
-
-        </section> <!--classes-details-->
+        </section>
 
         <section class="todo-details">
 
@@ -114,9 +109,11 @@
                 <p class="todo-detail__info">May 20 at 11:59pm</p>
             </div>
 
-        </section><!--todo-details-->
+        </section>
+        <!--todo-details-->
 
-    </div> <!--page body-->
+    </div>
+    <!--page body-->
 
 </main>
 
