--- a/src/classes_input.html
+++ b/src/classes_input.html
@@ -6,7 +6,7 @@
     </header>
     <div class="page__body">
         <form>
-            <div class="classes">
+            <div class="form__class">
 
                 <div id="success" class="alert success hide">SAVED!!</div>
                 <div id="fail" class="alert error hide">Something went wrong</div>
@@ -22,14 +22,14 @@
                     <option value="history">History</option>
                 </select>
 
-                <label for="classDesc" class="form__title">Description:</label>
-                <input id="classDesc" class="form__input" type="text" name="desc">
-
                 <label for="classTitle" class="form__title">* Title:</label>
                 <input id="classTitle" class="form__input" type="text" name="title">
 
-                <label for="classCredit" class="form__title">* Credits:</label>
-                <input id="classCredit" class="form__input" type="text" name="credit">
+                <label for="classDesc" class="form__title">Description:</label>
+                <input id="classDesc" class="form__input" type="text" name="desc">
+
+                <label for="classCredits" class="form__title">* Credits:</label>
+                <input id="classCredits" class="form__input" type="text" name="credits">
 
                 <button type="submit" value="Submit" class="btn">Submit</button>
 
