--- a/src/todo_input.html
+++ b/src/todo_input.html
@@ -6,7 +6,7 @@
     </header>
     <div class="page__body">
         <form>
-            <div class="todo">
+            <div class="form__todo">
 
                 <div id="success" class="alert success hide">SAVED!!</div>
                 <div id="fail" class="alert error hide">Something went wrong</div>
